--- a/src/app/shared-components/navbar/navbar.component.html
+++ b/src/app/shared-components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+ <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-3">
   <a class="navbar-brand" >Responsive navbar</a> 
   <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
     &#9776;
