--- a/src/app/user-module/user-view-components/register/register.component.html
+++ b/src/app/user-module/user-view-components/register/register.component.html
@@ -1,1 +1,47 @@
-<p>register works!</p>
+<div class="card container">
+  <article class="card-body">
+    <h4 class="card-title text-center">Sign Up</h4>
+    <hr>
+    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+      <div class="form-group row">
+        <label for="email" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input id="email" class="form-control-plaintext" formControlName="email" class="form-control"
+            placeholder="Email or login" type="email">
+          <div *ngIf="(email.dirty || email.touched || submitted)" class="invalid-feedback d-block">
+            <span *ngIf=" email.errors?.required">Email is required..</span>
+            <span *ngIf="submitted && email.errors?.email">Invalid Email..</span>
+          </div>
+        </div>
+      </div> <!-- form-group// -->
+      <div class="form-group row">
+        <label for="password" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+          <input id="password" class="form-control-plaintext" formControlName="password" class="form-control"
+            placeholder="******" type="password">
+          <div *ngIf="(password.dirty || password.touched || submitted)" class="invalid-feedback d-block">
+            <span *ngIf="password.errors?.required">Password is required..</span>
+            <span *ngIf="submitted && password.errors?.minlength">Password must be atleast 8 characters long..</span>
+          </div>
+        </div>
+      </div> <!-- form-group// -->
+      <div class="form-group row">
+        <label for="confirmpassword" class="col-sm-2 col-form-label">Confirm Password</label>
+        <div class="col-sm-10">
+          <input id="confirmpassword" class="form-control-plaintext" formControlName="confirmPassword"
+            class="form-control" placeholder="******" type="password">
+        </div>
+      </div>
+      <div class="row">
+        <div class="form-group col-sm-10 offset-2">
+          <button type="submit" class="btn btn-primary btn-block"> Sign Up </button>
+        </div> <!-- form-group// -->
+      </div>
+    </form>
+    <div class="row">
+      <div class="form-group col-sm-10 offset-2">
+        <button (click)="onSubmit()" class="btn btn-outline-success"> Sign In </button>
+      </div> <!-- form-group// -->
+    </div>
+  </article>
+</div>
