userinterface adjusted for home component

--- a/src/app/user-module/user-view-components/register/register.component.html
+++ b/src/app/user-module/user-view-components/register/register.component.html
@@ -40,7 +40,7 @@
     </form>
     <div class="row">
       <div class="form-group col-sm-10 offset-2">
-        <button (click)="onSubmit()" class="btn btn-outline-success"> Sign In </button>
+        <button (click)="signIn()" class="btn btn-outline-success"> Sign In </button>
       </div> <!-- form-group// -->
     </div>
   </article>
