--- a/src/app/user-module/user-view-components/home/home.component.html
+++ b/src/app/user-module/user-view-components/home/home.component.html
@@ -1,11 +1,17 @@
-<div class="card">
-  <div class="card-header text-center">
-    <h3>Educational Problems</h3>
-  </div>
-  <div class="card-body">
-    <h6 class="card-title">Question no 1:</h6>
-    <p class="card-text">Create sections from the data such that each section contains healthy combination of
-    students given there HSC and SSC scores.</p>
-    <button type="submit" class="btn btn-sm btn-primary" (click)="uploadData()">Create Sections</button>
+<app-submit-data (fileSelected)="fileSelected($event)"></app-submit-data>
+<div class="container">
+  <div class="card">
+    <div class="card-header text-center">
+      <h3>Educational Problems</h3>
+    </div>
+    <div class="card-body">
+      <h6 class="card-title">Question no 1:</h6>
+      <p class="card-text">Create sections from the data such that each section contains healthy combination of
+        students given there HSC and SSC scores.</p>
+      <button type="submit" class="btn btn-sm btn-primary" (click)="uploadData()">Get Answer</button>
+      <div *ngIf="!isFileSelected && uploadDataClicked" class="invalid-feedback d-block">
+            <span>Please select the data file first..</span>
+      </div>
+    </div>
   </div>
 </div>
