--- a/src/app/shared-components/navbar/navbar.component.html
+++ b/src/app/shared-components/navbar/navbar.component.html
@@ -1,18 +1,12 @@
  <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-3">
-  <a class="navbar-brand" >Responsive navbar</a> 
+  <a class="navbar-brand" >Machine Learning based Query Resolution
+System for Diverse Data sets</a> 
   <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
     &#9776;
   </button>
   <!-- Step 2: Add the ngbCollapse directive to the element below. -->
   <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <!-- Step 4: Close the menu when a link is clicked. -->
-        <a class="nav-link">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" >Logout</a>
-      </li>
     </ul>
   </div>
 </nav>
