--- a/src/app/user-module/user-view-components/home/home.component.html
+++ b/src/app/user-module/user-view-components/home/home.component.html
@@ -1,16 +1,21 @@
 <app-submit-data (fileSelected)="fileSelected($event)"></app-submit-data>
+<ngx-spinner></ngx-spinner>
 <div class="container">
   <div class="card">
-    <div class="card-header text-center">
-      <h3>Educational Problems</h3>
-    </div>
-    <div class="card-body">
-      <h6 class="card-title">Question no 1:</h6>
-      <p class="card-text">Create sections from the data such that each section contains healthy combination of
-        students given there HSC and SSC scores.</p>
-      <button type="submit" class="btn btn-sm btn-primary" (click)="uploadData()">Get Answer</button>
-      <div *ngIf="!isFileSelected && uploadDataClicked" class="invalid-feedback d-block">
+    <div *ngFor="let item of home;">
+      <div class="card-header text-center">
+        <h3>{{item._name}}</h3>
+      </div>
+      <div *ngFor="let question of item.questions;let i=index;">
+        <div class="card-body">
+          <h6 class="card-title">Question no :{{i+1}}</h6>
+          <p class="card-text">{{question._question}}</p>
+          <p class="card-text">These features Should be present : {{question._features}}</p>
+          <button type="submit" class="btn btn-sm btn-primary" (click)="uploadData()">Get Answer</button>
+          <div *ngIf="!isFileSelected && uploadDataClicked" class="invalid-feedback d-block">
             <span>Please select the data file first..</span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
