--- a/src/app/user-module/user-view-components/register/register.component.html
+++ b/src/app/user-module/user-view-components/register/register.component.html
@@ -4,6 +4,16 @@
     <hr>
     <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
       <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label">Name</label>
+        <div class="col-sm-10">
+          <input id="name" class="form-control-plaintext" formControlName="name" class="form-control"
+            placeholder="Enter your name here" type="name">
+          <div *ngIf="(name.dirty || name.touched || submitted)" class="invalid-feedback d-block">
+            <span *ngIf=" name.errors?.required">Name is required..</span>
+          </div>
+        </div>
+      </div>
+      <div class="form-group row">
         <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
           <input id="email" class="form-control-plaintext" formControlName="email" class="form-control"
