--- a/src/app/admin-module/admin-view-components/add-get-algorithm/add-get-algorithm.component.html
+++ b/src/app/admin-module/admin-view-components/add-get-algorithm/add-get-algorithm.component.html
@@ -15,6 +15,16 @@
           </div>
         </div>
       </div>
+      <div class="form-group row">
+        <label for="algorithmFile" class="col-sm-2 col-form-label">Algorithm File</label>
+        <div class="col-sm-10">
+          <div class="custom-file">
+            <input type="file" class="custom-file-input" id="algorithmFile" formControlName="algorithmFile"
+              (change)="handleDataFileInput($event.target.files)">
+            <label class="custom-file-label" for="dataFile">{{dataFileText}}</label>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="form-group col-sm-10 offset-2">
           <button type="submit" class="btn btn-primary btn-block"> Add </button>
@@ -24,7 +34,7 @@
   </article>
   <article class="card-body">
     <div class="row">
-      <div class="col-sm-9 offset-3">
+      <div class="col-sm-10 offset-2">
         <ag-grid-angular style="width: 100%%; height: 300px;" class="ag-theme-balham" [rowData]="rowData"
           [columnDefs]="columnDefs" (gridReady)="onGridReady($event)">
         </ag-grid-angular>
