--- a/src/app/admin-module/admin-view-components/add-get-domain/add-get-domain.component.html
+++ b/src/app/admin-module/admin-view-components/add-get-domain/add-get-domain.component.html
@@ -24,8 +24,8 @@
   </article>
   <article class="card-body">
     <div class="row">
-      <div class="col-sm-9 offset-3">
-        <ag-grid-angular style="width: 100%%; height: 300px;" class="ag-theme-balham" [rowData]="rowData"
+      <div class="col-sm-10 offset-2">
+        <ag-grid-angular style="width: 100%; height: 300px;" class="ag-theme-balham" [rowData]="rowData"
           [columnDefs]="columnDefs" (gridReady)="onGridReady($event)">
         </ag-grid-angular>
       </div>
