--- a/src/app/admin-module/admin-view-components/add-model-info/add-model-info.component.html
+++ b/src/app/admin-module/admin-view-components/add-model-info/add-model-info.component.html
@@ -4,6 +4,8 @@
   <article class="card-body">
     <h4 class="card-title text-center">Add Model Info</h4>
     <hr>
+    <ngb-alert *ngIf="alertMessage" [type]="alertType" class="mb-3 mt-3" (close)="alertMessage = ''">{{ alertMessage }}
+    </ngb-alert>
     <form [formGroup]="modelInfoForm">
       <div class="form-group row">
         <label for="modelFile" class="col-sm-3 col-form-label">Model File</label>
@@ -34,7 +36,17 @@
             </option>
           </select>
         </div>
-      </div> <!-- form-group// -->
+      </div>
+      <div class="form-group row">
+        <label for="domain" class="col-sm-3 col-form-label">Domain</label>
+        <div class="col-sm-9">
+          <select class="custom-select" id="domain" formControlName="domain">
+            <option value="" selected>Click to select domain</option>
+            <option *ngFor="let domain of domains" value={{domain._name}}> {{domain._name}}
+            </option>
+          </select>
+        </div>
+      </div>
       <div formArrayName="features" *ngFor="let feature of modelInfoForm.get('features').controls; let i = index;">
         <div [formGroupName]="i">
           <div class="form-group row">
@@ -56,7 +68,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="form-group col-sm-10 offset-2">
+        <div class="form-group col-sm-9 offset-3">
           <button (click)="onSubmit()" type="submit" class="btn btn-primary btn-block"> Submit </button>
         </div> <!-- form-group// -->
       </div>
