--- a/src/app/user-module/user-view-components/home/home.component.html
+++ b/src/app/user-module/user-view-components/home/home.component.html
@@ -13,7 +13,7 @@
           <div class="row">
             <div class="col-6">
               <select class="custom-select" id="dataFile"  [(ngModel)]="dataFileId">
-                <option  selected>Click to select feature mapping</option>
+                <option  selected>Click to select data set</option>
                 <option *ngFor="let data of question.userData" value={{data._id}}> {{data.file}}
                 </option>
               </select>
